fix: the broken UI by renamed category-item -> directory

--- a/src/components/category-preview/category-preview.style.scss
+++ b/src/components/category-preview/category-preview.style.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin-bottom: 30px;
 
-  .title {
+  .title-link {
     font-size: 28px;
     margin-bottom: 25px;
     cursor: pointer;
